Copy the WallViscousBC to be WallViscousBC_ptub

--- a/solvers/CompressibleFlowSolver/CMakeLists.txt
+++ b/solvers/CompressibleFlowSolver/CMakeLists.txt
@@ -28,6 +28,7 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
        ./BoundaryConditions/TimeDependentBC.cpp
        ./BoundaryConditions/WallBC.cpp
        ./BoundaryConditions/WallViscousBC.cpp
+       ./BoundaryConditions/WallViscousBC_ptub.cpp
        ./CompressibleFlowSolver.cpp
        ./Diffusion/DiffusionLDGNS.cpp
        ./EquationSystems/CompressibleFlowSystem.cpp
