--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -264,7 +264,8 @@ package-source-archive-build:
       - src/nektar++*.zip
     expire_in: 1 week
 
-package-source-archive-deploy-dev:
+package-source-archive-deploy-dev: &package-source-archive-deploy-dev
+  <<: *package-conditions
   stage: package-deploy-dev
   only:
     refs:
@@ -275,20 +276,20 @@ package-source-archive-deploy-dev:
     - pkg
     - pkg-src
   variables:
-      DPATH: /web/src-test
+    DPATH: /web/src-test
   dependencies:
     - package-source-archive-build
   script:
     - cp src/nektar++*.* /web/src
 
-.package-source-archive-deploy: &package-source-archive-deploy
+package-source-archive-deploy:
   <<: *package-source-archive-deploy-dev
   stage: package-deploy
   only:
     refs:
       - tags@nektar/nektar
   variables:
-      DPATH: /web/src
+    DPATH: /web/src
 
 ##
 ## Documentation
@@ -324,7 +325,7 @@ package-source-doc-build:
       - build/docs/tutorial/*/*/*.tar.gz
       - build/docs/tutorial/*/*/html
 
-package-source-doc-deploy-dev:
+package-source-doc-deploy-dev: &package-source-doc-deploy-dev
   stage: package-deploy-dev
   only:
     refs:
@@ -361,7 +362,7 @@ package-source-doc-deploy-dev:
     - cd $DPATH_DOC/tutorials && if [ $(ls -1 | grep -v latest | tail -n 1) == "${VERSION}" ]; then rm -f latest; ln -s ${VERSION} latest; fi
     - cd $DPATH_DOC/doxygen && if [ $(ls -1 | grep -v latest | tail -n 1) == "${VERSION}" ]; then rm -f latest; ln -s ${VERSION} latest; fi
 
-.package-source-doc-deploy: &package-source-doc-deploy
+package-source-doc-deploy:
   <<: *package-source-doc-deploy-dev
   stage: package-deploy
   only:
