call LST in FieldConvert

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,6 +261,8 @@ INCLUDE (ThirdPartyCwipi)
 INCLUDE (FindCFI)
 INCLUDE (FindLikwid)
 
+INCLUDE (ThirdPartyLST)
+
 INCLUDE (Doxygen)
 
 IF( NEKTAR_USE_TINYXML_STL )
