--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -323,10 +323,8 @@ package-source-doc-build:
       - build/docs/tutorial/*/*/html
 
 package-source-doc-deploy-dev: &package-source-doc-deploy-dev
+  <<: *package-conditions
   stage: package-deploy-dev
-  only:
-    refs:
-      - tags@nektar/nektar
   image: debian:stable-slim
   needs: ["package-source-doc-build"]
   variables:
