--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,24 +211,24 @@ IF (NEKTAR_USE_THREAD_SAFETY)
     ADD_DEFINITIONS(-DNEKTAR_USE_THREAD_SAFETY)
 ENDIF()
 
-# Disable backups
-IF(DEFINED ENV{NEKTAR_DISABLE_BACKUPS})
-    IF($ENV{NEKTAR_DISABLE_BACKUPS} MATCHES "ON")
-        SET(DEFAULT_NEKTAR_DISABLE_BACKUPS ON)
+# Enable backups
+IF(DEFINED ENV{NEKTAR_ENABLE_BACKUPS})
+    IF($ENV{NEKTAR_ENABLE_BACKUPS} MATCHES "ON")
+        SET(DEFAULT_NEKTAR_ENABLE_BACKUPS ON)
     ELSE()
-        SET(DEFAULT_NEKTAR_DISABLE_BACKUPS OFF)
+        SET(DEFAULT_NEKTAR_ENABLE_BACKUPS OFF)
     ENDIF()
 ELSE()
     IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-        SET(DEFAULT_NEKTAR_DISABLE_BACKUPS ON)
+	SET(DEFAULT_NEKTAR_ENABLE_BACKUPS OFF)
     ELSE()
-        SET(DEFAULT_NEKTAR_DISABLE_BACKUPS OFF)
+	SET(DEFAULT_NEKTAR_ENABLE_BACKUPS ON)
     ENDIF()
 ENDIF()
-OPTION(NEKTAR_DISABLE_BACKUPS "Disable automatic backup file creation" 
-    ${DEFAULT_NEKTAR_DISABLE_BACKUPS})
-IF (NEKTAR_DISABLE_BACKUPS)
-    ADD_DEFINITIONS(-DNEKTAR_DISABLE_BACKUPS)
+OPTION(NEKTAR_ENABLE_BACKUPS "Enable automatic backup file creation" 
+    ${DEFAULT_NEKTAR_ENABLE_BACKUPS})
+IF (NEKTAR_ENABLE_BACKUPS)
+    ADD_DEFINITIONS(-DNEKTAR_ENABLE_BACKUPS)
 ENDIF()
 
 IF (MSVC)
