Add the inflow condition to enforce entropy and normal velocity (S-U)

--- a/solvers/CompressibleFlowSolver/CMakeLists.txt
+++ b/solvers/CompressibleFlowSolver/CMakeLists.txt
@@ -19,6 +19,7 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
         BoundaryConditions/PressureOutflowNonReflectiveBC.cpp
         BoundaryConditions/RiemannInvariantBC.cpp
         BoundaryConditions/EnforceRhoP.cpp
+        BoundaryConditions/EnforceSU.cpp
         BoundaryConditions/RinglebFlowBC.cpp
         BoundaryConditions/StagnationInflowBC.cpp
         BoundaryConditions/SymmetryBC.cpp
