--- a/docker/nektar-env/Dockerfile_debian_documentation
+++ b/docker/nektar-env/Dockerfile_debian_documentation
@@ -1,9 +1,9 @@
-FROM %%BASE_IMAGE%%:env-buster-default
+FROM %%BASE_IMAGE%%:env-bullseye-default
 
 USER root
-COPY docker/nektar-env/buster_documentation_packages.txt packages.txt
+COPY docker/nektar-env/bullseye_documentation_packages.txt packages.txt
 
-RUN echo "deb http://deb.debian.org/debian buster non-free" > \
+RUN echo "deb http://deb.debian.org/debian bullseye non-free" > \
         /etc/apt/sources.list.d/debian-non-free.list && \
         apt-get update && \
         apt-get install -y $(cat packages.txt) \
