fix: Cache CMAKE_CXX_STANDARD when using ccmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ IF (POLICY CMP0074)
 ENDIF()
 
 # Nektar++ requires C++11.
-SET(CMAKE_CXX_STANDARD 11)
+SET(CMAKE_CXX_STANDARD 11 CACHE STRING "Default value for CXX_STANDARD property of targets")
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 SET(CMAKE_CXX_EXTENSIONS OFF)
 
