Fix FieldConvert boundary extraction with periodic boundary conditions

--- a/utilities/FieldConvert/CMakeLists.txt
+++ b/utilities/FieldConvert/CMakeLists.txt
@@ -48,6 +48,7 @@ ADD_NEKTAR_TEST(naca0012_3D_bnd)
 ADD_NEKTAR_TEST(Helmholtz)
 ADD_NEKTAR_TEST(Hex_channel_C0helmsmoothing)
 ADD_NEKTAR_TEST(surfDist)
+ADD_NEKTAR_TEST(bndextract)
 
 IF (NEKTAR_USE_METIS OR NEKTAR_USE_SCOTCH)
     ADD_NEKTAR_TEST(chan3D_part_only)
