--- a/utilities/FieldConvert/CMakeLists.txt
+++ b/utilities/FieldConvert/CMakeLists.txt
@@ -34,6 +34,9 @@ ADD_NEKTAR_TEST(interpfield)
 ADD_NEKTAR_TEST(interpfieldline)
 ADD_NEKTAR_TEST(interpfield_4tri_to_1tri)
 ADD_NEKTAR_TEST(interpfield_4quad_to_6tri)
+ADD_NEKTAR_TEST(interpfield_chan3DH1D_to_chan3DH1D)
+ADD_NEKTAR_TEST(interpfield_chan3DH1D_to_hex)
+ADD_NEKTAR_TEST(interpfield_hex_to_chan3DH1D)
 ADD_NEKTAR_TEST(naca0012_bnd_equispacedoutput)
 ADD_NEKTAR_TEST(smallmesh_isocontour)
 ADD_NEKTAR_TEST(kovas2)
