--- a/solvers/ADRSolver/CMakeLists.txt
+++ b/solvers/ADRSolver/CMakeLists.txt
@@ -108,6 +108,7 @@ IF( NEKTAR_SOLVER_ADR )
     # face rotation test
     ADD_NEKTAR_TEST(Advection3D_DG_hex_faceRotation1122)
     ADD_NEKTAR_TEST(Advection3D_DG_hex_faceRotation1221)
+    ADD_NEKTAR_TEST(Advection3D_DG_prism)
 
     # 1D inviscid Burger (DG/FR)
     ADD_NEKTAR_TEST(InviscidBurger1D_FRDG_GLL_LAGRANGE_SEM LENGTHY)
